2007-10-12  Martin Rudalics  <rudalics@gmx.at>

	* window.el (handle-select-window): Revert part of 2007-10-08
	change setting the input focus.

2007-10-12  Glenn Morris  <rgm@gnu.org>

	* startup.el (command-line): Do not read abbrev file in batch mode.

	* emacs-lisp/byte-opt.el (top level):
	* mail/rmail.el (rmail-list-to-menu):
	* obsolete/hilit19.el (hilit-mode):
	* progmodes/cc-mode.el (c-postprocess-file-styles)
	(c-submit-bug-report):
	* textmodes/org-publish.el (org-publish-get-plist-from-filename):
	* textmodes/reftex.el (reftex-erase-all-selection-and-index-buffers)
	(reftex-access-parse-file):
	* textmodes/reftex-cite.el (reftex-do-citation)
	(reftex-insert-bib-matches):
	* textmodes/reftex-ref.el (reftex-offer-label-menu):
	* textmodes/reftex-sel.el (reftex-select-unmark):
	* textmodes/reftex-toc.el (reftex-toc-do-promote):
	* vc-mcvs.el (vc-mcvs-checkin): Use mapc rather than mapcar.

	* cus-edit.el (custom-variable-menu, custom-face-menu)
	(custom-group-menu): Check init-file-user rather than
	user-init-file, in case cus-edit is loaded by site-run-file.

2007-10-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-deduce-fileset): Delete unused code.
	(vc-next-action): Fix typos.

2007-10-11  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs--mark-unmark): New function.
	(bs-mark-current, bs-unmark-current): Use it.

2007-10-11  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-diff):
	(vc-diff-internal): Bug fixes by Juanma Barranquero.  Temporarily
	disable the check for his edge case, it's calling some brittle
	code.
	(with-vc-properties): Fievaluation time of a macro argument.

	* ediff-vers.el (ediff-vc-internal):
	* vc-hooks.el:
	* loaddefs.el: Follow up on VC terminology change.

2007-10-11  Juanma Barranquero  <lekktu@gmail.com>

	* follow.el (follow-stop-intercept-process-output):
	Use `follow-call-process-filter' rather than `process-filter'.
	Simplify.

2007-10-11  Eric S. Raymond  <esr@snark.thyrsus.com>
